tests/ui/parser/issues/issue-108109-fn-trait-missing-paren.stderr
error: expected one of `(`, `+`, `,`, `::`, `<`, or `{`, found `->`
  --> $DIR/issue-108109-fn-trait-missing-paren.rs:3:34
   |
LL | pub fn func<F>() where F: FnOnce -> () {}
   |                           -------^^ expected one of `(`, `+`, `,`, `::`, `<`, or `{`
   |                           |     |
   |                           |     help: try adding parentheses
   |                           `Fn` bounds require arguments in parentheses

error: aborting due to 1 previous error

