tests/ui/parser/issues/issue-108109-fn-trait-missing-paren.rs
//@ run-rustfix

pub fn func<F>() where F: FnOnce -> () {}
//~^ ERROR expected one of
//~| NOTE expected one of
//~| NOTE `Fn` bounds require arguments in parentheses

fn main() {}
